Correcting the first page.

--- a/latex/thesis_template/EPFLreport.sty
+++ b/latex/thesis_template/EPFLreport.sty
@@ -127,8 +127,8 @@ External Expert \\[1\baselineskip]
 Thesis Supervisor\par
 \centering
 \vspace{1\baselineskip}
-EPFL IC IINFCOM HEXHIVE \\
-BC 160 (Bâtiment BC) \\
+EPFL IC DEDIS \\
+Bâtiment BC \\
 Station 14 \\
 CH-1015 Lausanne \\[\baselineskip]
 \today
