--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -1,19 +1,20 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % EPFL report package, main thesis file
 % Goal: provide formatting for theses and project reports
-% Author: Mathias Payer <mathias.payer@epfl.ch>
+% Template's Author: Mathias Payer <mathias.payer@epfl.ch>
+% Thesis's Author : Arnaud Pannatier <arnaud.pannatier@epfl.ch>
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[a4paper,11pt,oneside]{report}
 % Options: MScThesis, BScThesis, MScProject, BScProject
-\usepackage[MScThesis,lablogo]{EPFLreport}
+\usepackage[MScThesis]{EPFLreport}
 \usepackage{xspace}
 
-\title{A wonderful thesis\\about the merits of scientific writing}
-\author{The Student}
-\supervisor{The Doctoral Student}
-\adviser{Prof. Dr. sc. ETH Mathias Payer}
+\title{A Control Plane in Time and Space for Locality-Preserving Blockchains}
+\author{Arnaud Pannatier}
+\supervisor{Cristina Basescu}
+\adviser{Prof. Bryan Ford}
 %\coadviser{Second Adviser}
-\expert{The External Reviewer}
+\expert{\color{red}The External Reviewer\color{black}}
 
 \newcommand{\sysname}{FooSystem\xspace}
 
