Add the first version of Background.

--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -51,3 +51,12 @@
   booktitle = Oakland,
   keywords = {conference},
 }
+
+@misc{basescu2014crux,
+    title={Crux: Locality-Preserving Distributed Services},
+    author={Cristina Basescu and Michael F. Nowlan and Kirill Nikitin and Jose M. Faleiro and Bryan Ford},
+    year={2014},
+    eprint={1405.0637},
+    archivePrefix={arXiv},
+    primaryClass={cs.DC}
+}
